# genomics-hw-1

./: .gitattributes  .gitignore  HW1.ipynb  README.md  main.py  pyproject.toml
data/public/task-1/: solution.aux  solution.tex
data/public/task-2/: solution.aux  solution.tex
data/raw/: badmintonGames.pickle
notebooks/: HW1.ipynb
